--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
 stages:
   - build
   - test
+  - deploy
 
 
-build:
+build-job:
   stage: build
   image: mcr.microsoft.com/dotnet/sdk:8.0
   script:
@@ -11,3 +12,12 @@ build:
     - dotnet restore
     - echo "Компилируем проект"
     - dotnet build --no-restore -c Release
+
+test-job:
+  stage: test
+  image: mcr.microsoft.com/dotnet/sdk:8.0
+  script:
+    - echo "Запускаем тесты"
+    - dotnet test --verbosity normal
+  dependencies:
+    - build-job
