--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,18 @@ jobs:
 
       - name: Сборка проекта
         run: dotnet build --no-restore -c Release
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Получение исходного кода
+        uses: actions/checkout@v3
+
+      - name: Установка .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Сборка проекта
+        run: dotnet test --verbosity normal
