--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: dotnet build --no-restore
 
       - name: Сохранение объектов сборки
-        uses: actions/upload-artifacts@v3
+        uses: actions/upload-artifact@v3
         with:
           name: build-output
           paths: |
@@ -44,7 +44,7 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: Скачивание объектов сборки
-        uses: actions/download-artifacts@v3
+        uses: actions/download-artifact@v3
         with:
           name: build-output
           path: build-artifacts
