--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: build-output
-          paths: |
+          path: |
             - '**/bin'
             - '**/obj'
 
