--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: build-output
-          path: build-artifacts
+          path: ./
 
       - name: Сборка проекта
         run: dotnet test --no-build --verbosity normal
